syntax = "proto3";

// protoc --go_out=plugins=grpc:. *.proto
// PATH="${PATH}:${HOME}/go/bin" protoc --go_out=plugins=grpc:. *.proto

option go_package = "pinterest/services/auth/proto";
import "google/protobuf/timestamp.proto";


package auth;

message UserAuth {
  string Username = 1;
  string Password = 2;
}

message VkIDInfo {
  uint64 VkID = 1;
}

message VkAndUserIDInfo {
  uint64 UserID = 1;
  uint64 VkID = 2;
}

message CookieValue {
  string cookieValue = 1;
}
message UserID {
  uint64 uid = 1;
}

message Cookie {
  string Value = 1;
  google.protobuf.Timestamp Expires = 2;
}

message CookieInfo {
  uint64 userID = 1;
  Cookie cookie = 2;
}

message Credentials {
  uint64  userID = 1;
  string  username = 2;
  string  password = 3;
}

message Empty {}

service Auth {
  rpc   LoginUser(UserAuth) returns (CookieInfo) {}
  rpc   SearchCookieByValue(CookieValue) returns (CookieInfo) {}
  rpc   SearchCookieByUserID(UserID) returns (CookieInfo) {}
  rpc   LogoutUser(CookieValue) returns (Empty) {}
  rpc   ChangeCredentials(Credentials) returns (Empty) {}
}